# otae-bot-entari

./: .env.example  .gitignore  README.md  bot.py  entari.yml  pyproject.toml  requirements.txt
configs/: config.py  path_config.py
configs/minecraft_plugin/: config.json
configs/web_screenshot/: config.json
docs/: endfield_warfarin_wiki.md  fz_wiki_open_api_summary.md
plugins/McModQuery/: __init__.py
plugins/McWikiQuery/: __init__.py
plugins/bilibilibot/: __init__.py  client.py  config.py  draw.py  models.py  service.py  store.py
plugins/eft_helper/: data_source.py  draw.py  entity.py
plugins/endfield/: __init__.py  account_client.py  account_crypto.py  account_store.py  alias_data.json  aliases.py  client.py  commands.py  draw.py  gacha.py  gacha_assets.py  models.py  service.py  sources.py  xhh_client.py
plugins/forkout/: __init__.py
plugins/help_plugin/: __init__.py
plugins/mcsm/: __init__.py  client.py  config.py  deploy.py  draw.py  (+2 more)
scripts/: build_endfield_zero_potential_icon.py  deploy.ps1  help_pages.json  query_mc.js  setup.bat  setup.ps1  start-reload.bat  start.bat  stop.bat
tests/: test.py  test_core_logic.py  test_endfield.py  test_endfield_account.py  test_endfield_performance.py  test_endfield_potential_icon.py  test_endfield_visual.py  test_http_client.py  test_minecraft_plugin.py  test_runtime_optimization.py
utils/: async_cache.py  database.py  entari_native.py  error_handler.py  http_client.py  image_executor.py  image_utils.py  json_store.py  message_builder.py  plugin_data.py  runtime.py  temp_files.py  user_agent.py
(+20 files in other folders)
