[tool.poetry]
name = "otae-bot-entari"
version = "1.0.0"
description = "otae QQ Bot migrated to Entari"
authors = ["otae"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
arclet-entari = {version = "0.17.4", extras = ["full"]}
httpx = ">=0.24.0"
aiohttp = ">=3.8.0"
mcstatus = "*"
lxml = ">=4.9.0"
pillow = ">=9.0"
pil-utils = "*"
opencv-python = ">=4.5.0"
numpy = ">=1.21.0"
playwright = ">=1.30.0"
pydantic = ">=2.0.0"
pytz = "*"
pypinyin = "*"
apscheduler = ">=3.10.0"
PyYAML = ">=6.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
